make sure left panel scrollbar doesn't mess up layout (#1065)

--- a/v2/frontend/src/styles/mixins.scss
+++ b/v2/frontend/src/styles/mixins.scss
@@ -330,6 +330,7 @@ $shadow-level-3: 2px 6px 12px 0 rgba(25, 25, 25, 0.55);
         border-radius: 2px;
     }
 
+    overflow-y: overlay;
     scrollbar-color: var(--scrollbar-bg) transparent;
     scrollbar-width: thin;
 }
